--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
   <app-root></app-root>
+  <script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function() {
+      $('.ui.dropdown').dropdown({
+        on: 'hover'
+      })
+    });
+  </script>
 </body>
 </html>
